--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+    min-height: 100vh;
 }
 
 .header {
@@ -76,7 +77,6 @@
 }
 
 .cards_holder {
-    border: 2px solid red;
     width: 100%;
 }
 
@@ -85,10 +85,6 @@
     padding: 20px 0;
     box-sizing: border-box;
     border-bottom: 2px solid #15dfa3;
-}
-
-.invisible {
-    opacity: 0;
 }
 
 @media screen and (min-width: 1200px) {
