--- a/index.css
+++ b/index.css
@@ -12,17 +12,21 @@
     margin: 0;
     padding: 30px 0;
     box-sizing: border-box;
+    color: #e96acf;
+    align-items: center;
 }
 
 .main_title {
-    width: 100%;
-    text-align: center;
     margin: 0;
-    padding: 0;
+    padding: 0 50px;
     text-transform: uppercase;
     font-size: 35px;
     font-weight: 500;
-    color: #e96acf;
+}
+
+.main_subtitle {
+    font-size: 15px;
+    font-weight: 300;
 }
 
 .main {
@@ -85,6 +89,56 @@
     padding: 20px 0;
     box-sizing: border-box;
     border-bottom: 2px solid #15dfa3;
+}
+
+.search_container {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 10px 10px;
+    padding: 0;
+    box-sizing: border-box;
+    border: 2px solid #15dfa3;
+    border-radius: 25px;
+    background-color: #FFE6FA;
+    align-items: center;
+}
+
+.search_fieldset {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+    border: none;
+}
+
+.search_field {
+    margin: 0;
+    padding: 10px;
+    box-sizing:border-box;
+    border-radius: 25px;
+    border: none;
+    width: 100%;
+    background-color: transparent;
+}
+
+.search_field::placeholder {
+    font-weight: 500;
+    font-size: 15px;
+    color: #e96acf;
+    opacity: 0.5;
+}
+
+.search_search-button {
+    border: none;
+    background-color: transparent;
+    width: 45px;
+    height: 45px;
+    font-size: 20px;
+    color: #e96acf;
+}
+
+.search_search-button:hover {
+    cursor: pointer;
 }
 
 @media screen and (min-width: 1200px) {
