--- a/vue-project/src/assets/base.css
+++ b/vue-project/src/assets/base.css
@@ -61,7 +61,8 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  /* background: var(--color-background); */
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   transition:
     color 0.5s,
     background-color 0.5s;
